--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
     "json-client": "^0.9.3",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "sentence-case": "^2.1.1"
+    "redux-saga": "^0.16.0",
+    "sentence-case": "^2.1.1",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
